# umato

./: .gitignore  .gitmodules  API.md  LICENSE  Pipfile  README.md  algtime.txt  conftest.py  download.sh  elapsed_time.csv  global_init.csv  global_opt.csv  hubs.npy  local_init.csv  pyproject.toml  requirements1.txt  requirements2.txt  run-benchmark-old.sh  run-benchmark.py  run-benchmark.sh  runtime.py  scalability.py  setup.py  test.ipynb  test.py  test_numba.py  test_rptree.py  test_spheres.py  umato.csv
data/: .gitignore
data/FashionMNIST/raw/: download.sh
data/KMNIST/: download.sh
data/MNIST/raw/: download.sh
data/allen/: demo.ipynb
data/cifar-10-batches-py/: download.sh
data/flow/raw/: download.sh
data/lung/: .gitignore  download.sh
data/single-cell/: sc_10x.metadata.csv
data/spheres/: sphere_generation.py
evaluation/: README.md  comparison copy.py  comparison.py  comparison2.py  comparison_all.py  comparison_local.py  conver_add_label.py  convert_to_csv.py  convert_to_fvecs.py  convert_to_txt.py  run.sh  save_subset.py  stability.py  stability_over.py  utils.py  visualization.py
evaluation/models/: dataset.py  isomap.py  multicore-tsne.py  open-tsne.py  pca.py  tsne.py  umap.py
evaluation/models/atsne/: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  gradient.cuh  graph.hpp  handle_cuda_err.hpp  matrix.cuh  qvis_faiss_patch.cuh  qvis_gpu.cu  qvis_io.h  test_knn_accuracy.cu  test_top1_error.cu  testing.hpp  tsne.cuh  weight.cuh
evaluation/models/atsne/tools/: box_filter.py  coil20_transform.py  imagenet_infer.py  imagenet_preprocessing.py  largevis_convert.py  txt_to_fvecs.py  view.py
evaluation/models/topoae/: README.md  run-topoae.sh
evaluation/models/topoae/exp/: hypersearch_configs.py  save_csv.py  train_model.py
evaluation/models/topoae/settings/: cifar10.json  fmnist.json  kmnist.json  mnist.json  spheres.json
evaluation/models/topoae/src/: topology.py
evaluation/models/topoae/trained_models/: spheres.pth
evaluation/results/cifar10/: topoae.csv  tsne.csv  umap.csv  umato.csv
evaluation/results/fmnist/: pca.csv  topoae.csv  tsne.csv  umap.csv  umato.csv  umato_0025_35neg.csv  umato_003.csv
evaluation/results/kmnist/: pca.csv  topoae.csv  tsne.csv  umap.csv  umato.csv
evaluation/results/mnist/: pca.csv  topoae.csv  tsne.csv  umap.csv  umato.csv
evaluation/results/spheres/: pca.csv  topoae.csv  tsne.csv  umap.csv  umato.csv
example/: example.ipynb
scripts/: archive_baseline.sh  bench_large_datasets.py  compare_benchmark_results.py  covtype_scale_bench.py  prepare_labeled_datasets.sh  render_optimization_report.py
src/: run-benchmark.sh
src/evaluation/: comparison.py  comparison_local.py  convert_to_txt.py  save_subset.py  stability.py  stability_over.py  visualization.py
src/evaluation/models/: dataset.py  isomap.py  multicore-tsne.py  open-tsne.py  pca.py  tsne.py  umap.py  umap__.py
src/evaluation/models/topoae/: README.md  run-topoae.sh
src/evaluation/results/mnist/: topoae.csv
src/evaluation/results/spheres/: topoae.csv
src/umato/: __init__.py  layouts.py  umap_.py  umato_.py  umato_pva.py
tests/: test_api_validation.py  test_dataset_smoke_all.py  test_dataset_stress_matrix.py  test_fit_smoke.py  test_sparse_input.py  test_threading_api.py
umato/: __init__.py  distances.py  layouts.py  mst.py  nndescent.py  rp_tree.py  sparse.py  sparse_nndescent.py  spectral.py  topology_tmp.py  umap_.py  umap_original.py  umap_utils.py  umato_.py  umato_copy.py  umato_pva.py  utils.py  validation.py
visualization/: package-lock.json  package.json  rollup.config.js
visualization/public/: global.css  index.html
visualization/public/results/: .gitignore
visualization/public/results/allen/: UMATO_100_epochs_(default).csv  tsne_allen.csv  umap_allen_200.csv  umap_allen_2000.csv  umato_allen_1000.csv
visualization/public/results/cifar10/: pca.csv
visualization/public/results/classification/: umato.csv
visualization/public/results/fmnist/: UMAP.csv  atsne.csv  isomap.csv  pca.csv  topoae.csv  tsne.csv  umap.csv  umato.csv
visualization/public/results/init/: fmnist_init.csv  kmnist_init.csv  mnist_init.csv  spheres_init.csv
visualization/public/results/kmnist/: atsne.csv  isomap.csv  pca.csv  topoae.csv  tsne.csv  umap.csv  (+1 more)
visualization/src/: App.svelte  Arrow.svelte  Head.svelte  Linechart.svelte  Scatterplot.svelte  Scatterplot2.svelte  Scatterplot3.svelte  Scatterplot4.svelte  Scatterplot5.svelte  Scatterplot6.svelte  Scatterplot7.svelte  stability.json  umato_small.json
(+145 files in other folders)
