[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "umato"
version = "1.0.0"
description = "Python Implementation of UMATO (Uniform Manifold Approximation with Two-Phase Optimization)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT (includes BSD-licensed components from UMAP)"}
keywords = [
    "UMATO",
    "UMAP",
    "T-SNE",
    "Uniform Manifold Approximation",
    "Two-Phase Optimization",
    "Dimensionality Reduction",
    "Manifold",
    "Machine Learning",
    "Data Science"
]

authors = [
    { name = "Hyeon Jeon", email = "hj@hcil.snu.ac.kr" },
    { name = "Kwon Ko", email = "kwonko@stanford.edu" },
    { name = "Soohyun Lee", email = "shlee@hcil.snu.ac.kr" },
    { name = "Jake Hyun", email = "jakehyun@snu.ac.kr" },
    { name = "Taehyun Yang", email = "0705danny@snu.ac.kr" },
    { name = "Gyehun Go", email = "rotation_430@snu.ac.kr" },
    { name = "Jaemin Jo", email = "jmjo@skku.edu" },
    { name = "Jinwook Seo", email = "jseo@snu.ac.kr" }
]

maintainers = [
    { name = "Hyeon Jeon", email = "hj@hcil.snu.ac.kr" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "scikit-learn",
    "numpy",
    "scipy",
    "numba",
    "joblib"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3"
]

[project.urls]
Homepage = "https://github.com/hyungkwonko/umato"

[tool.setuptools]
packages = ["umato"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: slow tests with larger sweeps or full dataset runs",
    "datasets: tests that require labeled-datasets checkout",
]
filterwarnings = [
    "error:divide by zero encountered in divide:RuntimeWarning:umato.layouts",
    "error:invalid value encountered.*:RuntimeWarning:umato",
]
